# roon-tui

./: .gitignore  Cargo.toml  README.md  flake.nix
src/: app.rs  input.rs  main.rs
src/roon/: mod.rs  models.rs
src/ui/: browse.rs  help.rs  mod.rs  now_playing.rs  search.rs  zones.rs
